@@ -429,15 +429,19 @@ void ATARI_NTSC_DEFAULTS_Initialise(int *argc, char *argv[], atari_ntsc_setup_t 
 		}
 		else {
 		 	if (strcmp(argv[i], "-help") == 0) {
-				Aprint("\t-ntsc_hue <n>    Set NTSC hue -1..1 (default %.2g)",atari_ntsc_setup->hue);
-				Aprint("\t-ntsc_sat <n>    Set NTSC saturation (default %.2g)",atari_ntsc_setup->saturation);
-				Aprint("\t-ntsc_cont <n>   Set NTSC contrast (default %.2g)",atari_ntsc_setup->contrast);
-				Aprint("\t-ntsc_bright <n> Set NTSC brightness (default %.2g)",atari_ntsc_setup->brightness);
-				Aprint("\t-ntsc_sharp <n>  Set NTSC sharpness (default %.2g)",atari_ntsc_setup->sharpness);
+				Aprint("\t-ntsc_hue <n>    Set NTSC hue -1..1 (default %.2g) (-ntsc_emu only)",atari_ntsc_setup->hue);
+				Aprint("\t-ntsc_sat <n>    Set NTSC saturation (default %.2g) (-ntsc_emu only)",atari_ntsc_setup->saturation);
+				Aprint("\t-ntsc_cont <n>   Set NTSC contrast (default %.2g) (-ntsc_emu only)",atari_ntsc_setup->contrast);
+				Aprint("\t-ntsc_bright <n> Set NTSC brightness (default %.2g) (-ntsc_emu only)",atari_ntsc_setup->brightness);
+				Aprint("\t-ntsc_sharp <n>  Set NTSC sharpness (default %.2g) (-ntsc_emu only)",atari_ntsc_setup->sharpness);
 				Aprint("\t-ntsc_burst <n>  Set NTSC burst phase -1..1 (artif colours)(def: %.2g)",atari_ntsc_setup->burst_phase);
+				Aprint("\t                 (-ntsc_emu only)");
 				Aprint("\t-ntsc_gauss <n>  Set NTSC Gaussian factor (default %.2g)",atari_ntsc_setup->gaussian_factor);
+				Aprint("\t                 (-ntsc_emu only)");
 				Aprint("\t-ntsc_gamma <n>  Set NTSC gamma adjustment (default %.2g)",atari_ntsc_setup->gamma_adj);
+				Aprint("\t                 (-ntsc_emu only)");
 				Aprint("\t-ntsc_ramp <n>   Set NTSC saturation ramp factor (default %.2g)",atari_ntsc_setup->saturation_ramp);
+				Aprint("\t                 (-ntsc_emu only)");
 			}
 
 			argv[j++] = argv[i];
